Linked new library

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,7 @@ configurations.all {
 }
 
 dependencies {
+    compile project(':react-native-device-info')
     compile project(':react-native-version-number')
     compile project(':react-native-code-push')
     compile project(':realm')
