--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.bugsnag.android.gradle'
 apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
 import com.android.build.OutputFile
@@ -147,6 +148,7 @@ configurations.all {
 }
 
 dependencies {
+    compile project(':bugsnag-react-native')
     compile project(':react-native-version-number')
     compile project(':react-native-code-push')
     compile project(':realm')
